--- a/毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/反对日本进攻的方针、办法和前途.md
+++ b/毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/反对日本进攻的方针、办法和前途.md
@@ -58,7 +58,7 @@
 
 （六）国防教育。根本改革过去的教育方针和教育制度。不急之务和不合理的办法，一概废弃。新闻纸、出版事业、电影、戏剧、文艺，一切使合于国防的利益。禁止汉奸的宣传。
 
-（七）抗日的财政经济政策。财政政策放在有钱出钱和没收日本帝国主义者和汉奸的财产的原则上，经济政策放在抵制日货和提倡国货的原则上，一切为了抗日。穷是错误办法产生出来的，在有了合乎人民利益的新政策之后决不会穷。如此广土众民的国家而说财政经济无办法，真是没有道理的话。
+（七）抗日的财政经济政策。财政政策放在有钱出钱和没收日本帝国主义者和汉奸的财产的原则上，经济政策放在抵制日货和提倡国货的原则上，一切为了抗日。**穷是错误办法产生出来的，在有了合乎人民利益的新政策之后决不会穷。如此广土众民的国家而说财政经济无办法，真是没有道理的话。**
 
 （八）全中国人民、政府和军队团结起来，筑成民族统一战线的坚固的长城。执行抗战的方针和上述各项政策，依靠这个联合阵线。中心关键在国共两党的亲密合作。政府、军队、全国各党派、全国人民，在这个两党合作的基础之上团结起来。“精诚团结，共赴国难”这个口号，不应该只是讲得好听，还应该做得好看。团结要是真正的团结，尔诈我虞是不行的。办事要大方一点，手笔要伸畅一点。打小算盘，弄小智术，官僚主义，阿Q主义[^6]，实际上毫无用处。这些东西，用以对付敌人都不行，用以对付同胞，简直未免可笑。事情有大道理，有小道理，一切小道理都归大道理管着。国人应从大道理上好生想一想，才好把自己的想法和做法安顿在恰当的位置。在今天，谁要是在团结两个字上不生长些诚意，他即使不被人唾骂，也当清夜扪心，有点儿羞愧。
 
@@ -112,7 +112,7 @@
 
 ## 注释
 
-[^*]:一九三七年七月七日，日本帝国主义发动了卢沟桥事变，企图以武力吞并全中国。全国人民一致要求对日作战。蒋介石迟迟至事变后十日才在庐山发表谈话，确定了准备对日抗战的方针。这是由于全国人民的压力，同时也由于日本帝国主义的行动已严重地打击了英美帝国主义在中国的利益和蒋介石所直接代表的大地主大资产阶级的利益。但就在这时，蒋介石政府仍然同日本继续谈判，甚至接受日本同中国地方当局议定所谓和平解决的办法。一直到八月十三日日军大举进攻上海，蒋介石在东南的统治地位已无法维持，才被迫实行抗战。但在这以后，直到一九四四年，蒋介石同日本的秘密谋和活动，始终没有停止。蒋介石在整个抗日战争时期，完全背叛了他在庐山谈话中所谓“如果战端一开，那就地无分南北，人无分老幼，无论何人皆有守土抗战之责任”的声明，反对人民总动员的全面的人民战争，从一九三八年十月武汉失守以后，更采取消极抗日积极反共反人民的反动政策。毛泽东在这篇文章中所说的两种方针，两套办法，两个前途，正是说明了在抗日战争中一条共产党路线和另一条蒋介石路线之间的斗争。
+[^*]:**一九三七年七月七日，日本帝国主义发动了卢沟桥事变，企图以武力吞并全中国。全国人民一致要求对日作战。蒋介石迟迟至事变后十日才在庐山发表谈话，确定了准备对日抗战的方针。这是由于全国人民的压力，同时也由于日本帝国主义的行动已严重地打击了英美帝国主义在中国的利益和蒋介石所直接代表的大地主大资产阶级的利益。但就在这时，蒋介石政府仍然同日本继续谈判，甚至接受日本同中国地方当局议定所谓和平解决的办法。一直到八月十三日日军大举进攻上海，蒋介石在东南的统治地位已无法维持，才被迫实行抗战。但在这以后，直到一九四四年，蒋介石同日本的秘密谋和活动，始终没有停止。**蒋介石在整个抗日战争时期，完全背叛了他在庐山谈话中所谓“如果战端一开，那就地无分南北，人无分老幼，无论何人皆有守土抗战之责任”的声明，反对人民总动员的全面的人民战争，从一九三八年十月武汉失守以后，更采取消极抗日积极反共反人民的反动政策。毛泽东在这篇文章中所说的两种方针，两套办法，两个前途，正是说明了在抗日战争中一条共产党路线和另一条蒋介石路线之间的斗争。
 [^1]:卢沟桥事变也称七七事变。卢沟桥距北京（当时称北平）城十余公里，是北京西南的门户。当时北宁路（北京至辽宁沈阳的铁路）沿线，东起山海关，西至北京西南的丰台，都有日本侵略军驻扎。一九三七年七月七日，日军在卢沟桥向中国驻军进攻。在全国人民抗日热潮的推动和中国共产党的抗日主张的影响下，中国驻军奋起抵抗。中国人民英勇的八年抗战，从此开始。
 [^2]:第二十九军原来是冯玉祥西北军的一部分，当时驻在平津、河北、察哈尔（现在分属河北、山西两省）一带。宋哲元是这个军的军长，他在蒋介石对日妥协政策的影响下，曾一度幻想和平解决卢沟桥事变。冯治安是这个军的第三十七师师长，该师的一一○旅在卢沟桥奋起抵抗日本侵略军的进攻，揭开了全国性抗战的序幕。
 [^3]:一九三一年一月三十一日国民党政府颁布了《危害民国紧急治罪法》，用“危害民国”的罪名作为迫害和杀戮爱国人民和革命者的借口。按该法的规定，凡从事反对国民党政权的革命活动者处死刑；凡与革命活动发生联系的或以文字图书演说方式进行革命宣传者处死刑、无期徒刑或十年以上有期徒刑；凡组织进步文化团体、集会宣传反法西斯主义者处五年以上十五年以下有期徒刑等。《危害民国紧急治罪法》的颁布，标志着国民党统治的日益法西斯化。
